--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
 :root {
-  --title: lime;
+  --title_color: lime;
+  --title_zise: 20px;
   --text_color: rgb(107, 3, 107);
-  --text_size: 20px;
+  --text_size: 16px;
 }
 * {
   padding: 0;
@@ -10,18 +11,21 @@
 
 body {
   position: relative;
-  height: 100vh;
-  width: 100%;
   text-align: center;
   font-family: sans-serif;
+  font-size: var(--text_size);
+  color: var(--text_color);
   background-color: rgb(2, 2, 40);
 }
 
-h1 {
-  color: var(--title);
+#container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid rgba(43, 255, 0, 0.7);
+  margin: 5em auto;
 }
-p {
-  color: var(--text_color);
-  font-size: var(--text_size);
-  font-weight: bold;
+h1 {
+  color: var(--title_color);
+  font-size: var(--title_zise);
 }
