--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,10 +8,12 @@
 body {
   position: relative;
   text-align: center;
-  font-family: sans-serif;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
   font-size: var(--text_size);
   color: var(--text_color);
-  background-color: rgb(4, 4, 92);
+  font-family: "Courier New", Courier, monospace;
+  background-color: rgb(2, 2, 114);
   padding: 0;
   margin: 0;
 }
@@ -24,7 +26,7 @@ body {
   margin: 5em auto;
 }
 #cabecera {
-  background-color: rgba(171, 7, 171, 0.902);
+  background-color: rgb(180, 6, 180);
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.75);
   color: black;
   font-weight: bold;
