--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 :root {
   --title_color: lime;
   --title_zise: 20px;
-  --text_color: rgb(107, 3, 107);
+  --text_color: orangered;
   --text_size: 16px;
 }
 
