--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,7 @@ body {
   margin: 5em auto;
 }
 #cabecera {
-  background-color: darkviolet;
+  background-color: orangered;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.75);
   color: black;
   font-weight: bold;
